--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <div class="container" align="center">
+    <div class="menu" align="center">
         <div class="row  row-cols-sm-4">
             <div th:each="foodtype : ${foodtypes}" align="center">
 
