--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -43,5 +43,15 @@ span.error {
     color: red;
     font-style: italic;
     font-size: 75%;
+}
 
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+
+  > .col,
+  > [class*="col-"] {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
