--- a/src/main/resources/templates/orders-view.html
+++ b/src/main/resources/templates/orders-view.html
@@ -6,7 +6,7 @@
 <body>
 
 <div layout:fragment="content">
-    <div class="container-fluid main-content ">
+    <div class="container main-content ">
         <div class="row">
             <div class="col-7">
                 <h3>Orders</h3>
