--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -28,7 +28,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" th:classappend="${module == 'orders' ? 'active' : ''}" href="#"
+                        <a class="nav-link text-nowrap" th:classappend="${module == 'orders' ? 'active' : ''}" href="#"
                            th:href="@{/myOrders}">My orders</a>
                     </li>
 
