--- a/src/main/resources/templates/myorders-view.html
+++ b/src/main/resources/templates/myorders-view.html
@@ -6,7 +6,7 @@
 <body>
 
 <div layout:fragment="content">
-    <div class="container-fluid main-content ">
+    <div class="container main-content ">
         <div class="row">
             <div class="col-7">
                 <h3>Orders</h3>
@@ -15,7 +15,6 @@
         <table id="table" class="table table-striped table-sm">
             <thead>
                 <th scope="col">#</th>
-                <th scope="col">Customer ID</th>
                 <th scope="col">Sum</th>
                 <th scope="col">Payment method</th>
                 <th scope="col">Date</th>
@@ -28,7 +27,6 @@
             <tbody>
                 <tr th:each="order : ${orders}">
                     <td th:text="${order.id}"></td>
-                    <th scope="row"><a th:href="@{'/customers/' + ${order.customerid}}" th:text="${order.customerid}"></a></th>
                     <td th:text="${order.sum}"></td>
                     <td th:text="${order.paymentEntity.paymentmethod}"></td>
                     <td th:text="${order.localDate}"></td>
