--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}"lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +7,7 @@
     <title>Ultimate pizza delivery | Error</title>
 </head>
 <body>
-<div th:replace="header :: header"></div>
+<div layout:fragment="content">
 <div class="px-4 py-5 my-5 text-center">
     <h1 class="display-5 fw-bold">Ooooops!</h1>
     <div class="col-lg-6 mx-auto">
@@ -15,6 +15,7 @@
         <h3 class="display-5 text-center" th:text="${status}"></h3>
         <p class="lead mb-4" th:text="${errorText}">The page you are looking for doesn't exist.</p>
     </div>
+</div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
