--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -61,31 +61,43 @@
                                             </button>
                                         </div>
                                         <div class="modal-body">
-                                            <table class="table-sm  table-striped w-auto small " align="center">
-                                                <thead class="ttop">
-                                                <tr class="table-info">
-                                                    <td width="20px"><b> №</b></td>
-                                                    <td><b>Description</b></td>
-                                                    <td width="60px"><b>Price</b></td>
-                                                    <td width="60px"><b></b></td>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr th:each="dish,iter : ${dishes}" class="display-8">
-                                                    <td th:text=${iter.index}+1>Num</td>
-                                                    <td th:text="${dish.description}">Food</td>
-                                                    <td th:text="${dish.sum}">Price</td>
-                                                    <td>
-                                                        <form action="#" th:action="@{/delete/}+${iter.index}"
-                                                              method="get">
-                                                            <input class="btn btn-danger btn-sm" type="submit"
-                                                                   value="del">
-                                                        </form>
-                                                    </td>
-                                                    </td>   </tr>
-                                                </tbody>
 
-                                            </table>
+
+                                            <div th:each="dish,iter : ${dishes}" class="display-8">
+
+                                                    <div class="card">
+                                                        <div class="card-body inline-block">
+                                                            <div class="card-row">
+                                                                <div class="row" align="center">
+                                                                    <div class="col-2 align-self-center mb-0">
+
+                                                                        <img class="card-img-top width:50px" style="width: auto; height: 50px;" th:src="@{/images/}+${dish.foodType.id}+'.jpg'"
+                                                                             alt="Card image cap">
+                                                                    </div>
+                                                                    <div class="col-6 align-self-center mb-0" th:text="${dish.description}"></div>
+                                                                    <div class="col-3 align-self-center mb-0" th:text="${dish.sum}+'tg.'"></div>
+
+
+                                                                    <div class="col-1 align-self-center mb-0">
+                                                                        <form action="#"
+                                                                              th:action="@{/delete/}+${iter.index}"
+                                                                              method="get">
+                                                                            <input class="btn-close"
+                                                                                   type="submit"
+                                                                                   value=""
+                                                                                   style="font-size: 0.8em;">
+
+                                                                        </form>
+                                                                    </div>
+
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                            </div>
+
+
                                             <small id="passwordHelpBlock" class="form-text text-muted">
                                                 Delivery cost = 1500 tg.
                                             </small>
@@ -96,34 +108,42 @@
 
                                                 <div class="form-group">
                                                     <label aling="left" for="name">Name</label>
-                                                    <input type="text" class="form-control input-sm" id="name"
+                                                    <input type="text" class="form-control input-sm"
+                                                           id="name"
                                                            th:field="*{name}">
                                                 </div>
                                                 <div class="form-group">
                                                     <label aling="left" for="mobile">Mobile</label>
-                                                    <input type="tel" class="form-control input-sm" id="mobile"
+                                                    <input type="tel" class="form-control input-sm"
+                                                           id="mobile"
                                                            th:field="*{mobile}">
                                                 </div>
                                                 <div class="form-group">
-                                                    <label aling="left" for="address">Delivery address</label>
-                                                    <input type="text" class="form-control input-sm" id="address"
+                                                    <label aling="left" for="address">Delivery
+                                                        address</label>
+                                                    <input type="text" class="form-control input-sm"
+                                                           id="address"
                                                            th:field="*{address}">
                                                 </div>
                                                 <div class="form-group">
                                                     <label aling="left" for="address">Comments</label>
-                                                    <input type="text" class="form-control input-sm" id="comments"
+                                                    <input type="text" class="form-control input-sm"
+                                                           id="comments"
                                                            th:field="*{comments}">
                                                 </div>
                                             </form>
                                         </div>
+
                                         <div class="modal-footer">
                                             <div class="container" align="left">
                                                 <td><b>Total: </b></td>
-                                                <td><b th:text="${#aggregates.sum(dishes.![sum])}+1500"/></td>
+                                                <td><b th:text="${#aggregates.sum(dishes.![sum])}+1500"/>
+                                                </td>
                                                 <td><b>tg. </b></td>
                                                 <br>
                                             </div>
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                            <button type="button" class="btn btn-secondary"
+                                                    data-dismiss="modal">Close
                                             </button>
                                             <input class="btn btn-primary" form="clientForm" type="submit"
                                                    value="Pay by cash" name="action">
@@ -139,7 +159,7 @@
                 </div>
 
                 <div class="nav-item text-nowrap" style="color:white;">
-                    <div sec:authorize="!isAuthenticated()" ><strong>Welcome dear guest!</strong></div>
+                    <div sec:authorize="!isAuthenticated()"><strong>Welcome dear guest!</strong></div>
                     <div sec:authorize="isAuthenticated()">
                         <strong> Welcome: <b sec:authentication="name"></b> </strong>
                     </div>
