--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="content">
 <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Ooooops!</h1>
+    <h2 class="display-5 fw-bold">Oops!</h2>
     <div class="col-lg-6 mx-auto">
         <h3 class="display-5 text-center" th:text="${error}"></h3>
         <h3 class="display-5 text-center" th:text="${status}"></h3>
