--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,7 +17,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" th:classappend="${module == 'customers' ? 'active' : ''}" href="#"
                            th:href="@{/customers}" sec:authorize="hasAuthority('ADMIN')">Customers</a>
@@ -65,35 +65,39 @@
 
                                             <div th:each="dish,iter : ${dishes}" class="display-8">
 
-                                                    <div class="card">
-                                                        <div class="card-body inline-block">
-                                                            <div class="card-row">
-                                                                <div class="row" align="center">
-                                                                    <div class="col-2 align-self-center mb-0">
+                                                <div class="card">
+                                                    <div class="card-body inline-block">
+                                                        <div class="card-row">
+                                                            <div class="row" align="center">
+                                                                <div class="col-2 align-self-center mb-0">
 
-                                                                        <img class="card-img-top width:50px" style="width: auto; height: 50px;" th:src="@{/images/}+${dish.foodType.id}+'.jpg'"
-                                                                             alt="Card image cap">
-                                                                    </div>
-                                                                    <div class="col-6 align-self-center mb-0" th:text="${dish.description}"></div>
-                                                                    <div class="col-3 align-self-center mb-0" th:text="${dish.sum}+'tg.'"></div>
-
-
-                                                                    <div class="col-1 align-self-center mb-0">
-                                                                        <form action="#"
-                                                                              th:action="@{/delete/}+${iter.index}"
-                                                                              method="get">
-                                                                            <input class="btn-close"
-                                                                                   type="submit"
-                                                                                   value=""
-                                                                                   style="font-size: 0.8em;">
-
-                                                                        </form>
-                                                                    </div>
-
+                                                                    <img class="card-img-top width:50px"
+                                                                         style="width: auto; height: 50px;"
+                                                                         th:src="@{/images/}+${dish.foodType.id}+'.jpg'"
+                                                                         alt="Card image cap">
                                                                 </div>
+                                                                <div class="col-6 align-self-center mb-0"
+                                                                     th:text="${dish.description}"></div>
+                                                                <div class="col-3 align-self-center mb-0"
+                                                                     th:text="${dish.sum}+'tg.'"></div>
+
+
+                                                                <div class="col-1 align-self-center mb-0">
+                                                                    <form action="#"
+                                                                          th:action="@{/delete/}+${iter.index}"
+                                                                          method="get">
+                                                                        <input class="btn-close"
+                                                                               type="submit"
+                                                                               value=""
+                                                                               style="font-size: 0.8em;">
+
+                                                                    </form>
+                                                                </div>
+
                                                             </div>
                                                         </div>
                                                     </div>
+                                                </div>
 
                                             </div>
 
