--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -36,7 +36,7 @@
 
                 <div class="container ">
                     <div class="row">
-                        <div align="center" class="col py-6">
+                        <div align="center" class="col">
 
                             <!-- MODAL BUTTON -->
                             <button type="button" class="btn btn-primary" th:disabled="${orderCart.isEmpty eq true}"
